--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div style="text-align: center;">
 <p>相关软件下载</p>
 <p>v2rayN官方软件永久更新地址<br />
 https://github.com/2dust/v2rayN/releases</p>
@@ -8,3 +9,4 @@ https://github.com/ender-zhao/Clash-for-Windows_Chinese/releases</p>
 <p>&nbsp;</p>
 <p>免费VPN  订阅地址  20230504更新</p>
 <p>百度网盘：https://pan.baidu.com/s/1YmTIFNoIejOZ6bnT1JnXHQ?pwd=8u1e</p>
+</div>
