--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div style="text-align: center;">
-<p>相关软件下载</p>
+<p>免费魔法地址以及相关软件下载</p>
 <p>v2rayN官方软件永久更新地址<br />
 https://github.com/2dust/v2rayN/releases</p>
 <p>Clash官方软件永久更新地址<br />
