--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
+
+<!DOCTYPE html>  
+<html>  
+<head>  
+<title>免费VPN以及相关软件下载</title>  
+</head>  
+<body> 
 <div style="text-align: center;">
-<p>免费魔法地址以及相关软件下载</p>
+<p>免费VPN以及相关软件下载</p>
 <p>v2rayN官方软件永久更新地址<br />
 https://github.com/2dust/v2rayN/releases</p>
 <p>Clash官方软件永久更新地址<br />
@@ -10,3 +17,5 @@ https://github.com/ender-zhao/Clash-for-Windows_Chinese/releases</p>
 <p>免费VPN  订阅地址  20230504更新</p>
 <p>百度网盘：https://pan.baidu.com/s/1YmTIFNoIejOZ6bnT1JnXHQ?pwd=8u1e</p>
 </div>
+</body>  
+</html>
