--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 
-<!DOCTYPE html>  
+<!DOCTYPE>  
 <html>  
 <head>  
 <title>免费VPN以及相关软件下载</title>  
 </head>  
 <body> 
-<div style="text-align: center;">
+<div style="text-align: left;">
 <p>免费VPN以及相关软件下载</p>
 <p>v2rayN官方软件永久更新地址<br />
 https://github.com/2dust/v2rayN/releases</p>
